# srv-comm

./: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
src/: client.py  server.py
src/clients/: http_client.py
src/services/: srv_a.py  srv_b.py
tests/: conftest.py  test_client.py  test_http_client.py  test_server.py  test_service_a.py  test_service_b.py
