[tool.poetry]
name = "ex1"
version = "0.0.0"
description = ""
authors = ["johnplitharas@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest =  "*"
pytest-cov =  "*"
pre-commit =  "*"
ipython =  "*"
mypy =  "*"
pytest-coverage = "*"
pandas-stubs = "*"
types-tqdm = "*"
types-requests = "*"
sphinx = "*"
furo = "*"
recommonmark =  "*"
nbsphinx =  "*"
sphinx-copybutton = "*"
ruff = "*"
httpx = "^0.27.0"

[tool.commitizen]
version = "0.0.0"
version_files = [
    "pyproject.toml:^version",
]
version_scheme = "semver"
version_provider = "poetry"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".env",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.11
target-version = "py311"
###################################
########## FORMAT SETTINGS ########
###################################
[tool.ruff.format]
# https://docs.astral.sh/ruff/formatter/
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

###################################
########## LINTER SETTINGS ########
###################################
[tool.ruff.lint]
select = ["E", "W", "C", "R", "F"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"  # Like Black, allow dummy variables.
extend-ignore   = ["W191", "E111", "E114", "E117","D206", "RET504" ]


[tool.ruff.lint.isort]
order-by-type = true
case-sensitive = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"